Moved material buttons vars to their own file

--- a/assets/v2/material/material-structure-vars.scss
+++ b/assets/v2/material/material-structure-vars.scss
@@ -389,96 +389,7 @@ $content-margin-right-tablet-and-desktop: $content-margin-horiz-tablet-and-deskt
 
 // MARK: Buttons
 
-$button-cursor: pointer !default;
-$button-border-radius: 2px !default;
-$button-padding: 11px 16px !default;
-$button-dense-padding: 9.5px 8px !default;
-$button-large-padding: $button-padding !default;
-$button-margin: 8px !default;
-$button-min-width: 64px !default;
-
-$button-flat-padding: 11px 8px !default;
-$button-flat-margin: 8px !default;
-$button-flat-min-width: 88px !default;
-
-$button-app-bar-padding: $button-flat-padding !default;
-$button-app-bar-margin: 0 !default;
-$button-app-bar-min-width: var(--app-bar-height-auto) !default;
-
-$button-image-padding: 0 !default;
-$button-image-margin: $button-margin !default;
-$button-image-min-width: 36px !default;
-
-$button-app-bar-image-padding: $button-app-bar-padding !default;
-$button-app-bar-image-margin: $button-app-bar-margin !default;
-$button-app-bar-image-min-width: $button-image-min-width !default;
-
-$button-resting-shadow: shadow(2) !default;
-$button-hover-shadow: shadow(8) !default;
-$button-pressed-shadow: shadow(0) !default;
-
-
-$fab-diameter: 56px !default;
-
-
-$ripple-end-diameter: 96px !default;
-$ripple-end-radius: $ripple-end-diameter / 2;
-$ripple-grow-duration: 200ms !default;
-$ripple-fade-duration: 700ms !default;
-$ripple-fade-size-multiplier: 1.5 !default;
-$ripple-midpoint-opacity: 0.3 !default;
-
-
-$common-button-selector: "button, .button, :link.button, :visited.button, input[type=submit], input[type=reset]";
-$image-button-selector: ".image-button";
-$chip-selector: ".chip, .pill";
-$floating-action-button-selector: ".floating-action-button, .mini-floating-action-button";
-$uncommon-button-selector: $image-button-selector + ", " + $floating-action-button-selector;
-$stationary-button-selector: $common-button-selector + ", " + $image-button-selector;
-$button-selector: $common-button-selector + ", " + $uncommon-button-selector;
-
-$chip-button-group-selector: ".chips, .pills";
-
-
-@include css-vars((
-    --button-cursor: $button-cursor,
-    --button-border-radius: $button-border-radius,
-    --button-padding: $button-padding,
-    --button-dense-padding: $button-dense-padding,
-    --button-large-padding: $button-large-padding,
-    --button-margin: $button-margin,
-
-    --button-flat-padding: $button-flat-padding,
-    --button-flat-margin: $button-flat-margin,
-    --button-flat-min-width: $button-flat-min-width,
-
-    --button-app-bar-padding: $button-app-bar-padding,
-    --button-app-bar-margin: $button-app-bar-margin,
-    --button-app-bar-min-width: $button-app-bar-min-width,
-
-    --button-image-padding: $button-image-padding,
-    --button-image-margin: $button-image-margin,
-    --button-image-min-width: $button-image-min-width,
-
-    --button-app-bar-image-padding: $button-app-bar-image-padding,
-    --button-app-bar-image-margin: $button-app-bar-image-margin,
-    --button-app-bar-image-min-width: $button-app-bar-image-min-width,
-
-    --button-resting-shadow: $button-resting-shadow,
-    --button-hover-shadow: $button-hover-shadow,
-    --button-pressed-shadow: $button-pressed-shadow,
-
-
-    --fab-diameter: $fab-diameter,
-
-
-    --ripple-end-diameter: $ripple-end-diameter,
-    --ripple-end-radius: $ripple-end-radius,
-    --ripple-grow-duration: $ripple-grow-duration,
-    --ripple-fade-duration: $ripple-fade-duration,
-    --ripple-fade-size-multiplier: $ripple-fade-size-multiplier,
-    --ripple-midpoint-opacity: $ripple-midpoint-opacity,
-));
+@import "material-buttons-vars";
 
 
 
