--- a/assets/v2/material/material-cards.scss
+++ b/assets/v2/material/material-cards.scss
@@ -7,6 +7,7 @@
 
 @import "css-vars";
 @import "material-shadows-vars";
+@import "material-buttons-vars";
 
 
 
@@ -52,6 +53,14 @@
 
     &.raised {
         box-shadow: $shadow-raised;
+    }
+
+    >footer:last-child {
+        margin-block-end: calc(0px - var(--card-padding-block-end));
+
+        > #{$button-selector} {
+            margin-block-end: 0;
+        }
     }
 }
 
