--- a/assets/v2/material/material-chips.scss
+++ b/assets/v2/material/material-chips.scss
@@ -15,7 +15,7 @@
 
 #{$chip-selector} {
     display: inline-block;
-    margin: 0 8px;
+    margin: 0.5ex 1ex;
     padding: 0.75ex 1.5ex;
     border-radius: 99in;
     background: var(--chip-background);
