Forgot to update sidebar bottom section to only have a top border

--- a/assets/v2/material/material-sidebar-renderer.scss
+++ b/assets/v2/material/material-sidebar-renderer.scss
@@ -88,6 +88,7 @@
             position: sticky;
             bottom: 0;
 
+            border-block-start-style: solid;
             border-block-end-style: none;
         }
     }
