--- a/assets/v2/material/material-sidebar-renderer.scss
+++ b/assets/v2/material/material-sidebar-renderer.scss
@@ -81,7 +81,7 @@
         }
 
         &:nth-last-child(2) {
-            margin-bottom: -1px;
+            border-block-end-style: none;
         }
 
         &:last-child {
