--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -18,7 +18,6 @@
 // MARK: - Buttons
 
 @import "material-buttons";
-
 @import "material-buttons+icons";
 
 
@@ -38,6 +37,7 @@
 // MARK: - Sidebar
 
 @import "material-sidebar-renderer";
+@import "material-sidebar+buttons";
 
 
 
