Better contrast for Neon Water links in light mode

--- a/assets/v2/neon/neon-water-vars.scss
+++ b/assets/v2/neon/neon-water-vars.scss
@@ -6,7 +6,7 @@
 @import "neon-shared-vars";
 
 $theme-primary-color: #00b0ff;
-$theme-accent-color: #4db6ac;
+$theme-accent-color: #009688;
 $theme-text-on-primary-color-color: #fff;
 $theme-text-on-accent-color-color: #000;
 
