Started lists stylesheet

--- a/assets/v2/structure/structure-renderer.scss
+++ b/assets/v2/structure/structure-renderer.scss
@@ -1,6 +1,7 @@
 
 // NOTE: This file does NOT set the actual values. For that, you must first import a stylesheet that does, like 'material-structure-vars'
 
-@import 'css-vars';
-@import 'material-components-renderer';
-@import 'flex-incl';
+@import "css-vars";
+@import "material-components-renderer";
+@import "flex-incl";
+@import "lists";
