--- a/assets/v2/neon/neon-tables-incl.scss
+++ b/assets/v2/neon/neon-tables-incl.scss
@@ -133,7 +133,7 @@ table {
         display: block;
         position: sticky;
         left: 0;
-        margin: 0 0 18px;
+        margin: 1ex 1em 18px;
         opacity: 0.5;
         font-size: small;
         text-align: end;
