--- a/assets/v2/neon/neon-brightness.scss
+++ b/assets/v2/neon/neon-brightness.scss
@@ -3,8 +3,8 @@
 //
 // Allows you to set the theme's brightness
 
-@import 'css-vars';
-@import 'neon-shared-vars';
+@import "css-vars";
+@import "./neon-shared-vars.css";
 
 
 
