--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -1,43 +1,29 @@
+---
+---
+
 
 // neon-shared-vars
 //
 // Variables that all Neon subthemes use
 
+@import "./neon-all-themes-vars.css";
 @import "css-vars";
 $css-vars-use-native: true;
 
 
-
-$white-theme-background-color: hsl(0,0, 100%) !default;
-$light-theme-background-color: hsl(0,0, 90%) !default;
-$dark-theme-background-color: hsl(200, 19%, 18%) !default;
-$black-theme-background-color: hsl(0,0, 0) !default;
-$default-theme-background-color: var(--light-theme-background-color) !default;
-
-$white-theme-foreground-color: hsl(0, 0%, 13%) !default;
-$light-theme-foreground-color: hsl(0, 0%, 13%) !default;
-$dark-theme-foreground-color: hsl(0, 0%, 93%) !default;
-$black-theme-foreground-color: hsl(0, 0%, 93%) !default;
-$default-theme-foreground-color: var(--light-theme-foreground-color) !default;
-
-$theme-text-on-primary-color-color: #fff !default;
-$theme-text-on-accent-color-color: #000 !default;
-
-
-
 @include css-vars((
-    --theme-text-on-primary-color-color: $theme-text-on-primary-color-color,
-    --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
+    --white-theme-background-color: hsl(0,0, 100%),
+    --light-theme-background-color: hsl(0,0, 90%),
+    --dark-theme-background-color: hsl(200, 19%, 18%),
+    --black-theme-background-color: hsl(0,0, 0),
+    --default-theme-background-color: var(--light-theme-background-color),
 
-    --white-theme-background-color: $white-theme-background-color,
-    --light-theme-background-color: $light-theme-background-color,
-    --dark-theme-background-color: $dark-theme-background-color,
-    --black-theme-background-color: $black-theme-background-color,
-    --default-theme-background-color: $default-theme-background-color,
+    --white-theme-foreground-color: hsl(0, 0%, 13%),
+    --light-theme-foreground-color: hsl(0, 0%, 13%),
+    --dark-theme-foreground-color: hsl(0, 0%, 93%),
+    --black-theme-foreground-color: hsl(0, 0%, 93%),
+    --default-theme-foreground-color: var(--light-theme-foreground-color),
 
-    --white-theme-foreground-color: $white-theme-foreground-color,
-    --light-theme-foreground-color: $light-theme-foreground-color,
-    --dark-theme-foreground-color: $dark-theme-foreground-color,
-    --black-theme-foreground-color: $black-theme-foreground-color,
-    --default-theme-foreground-color: $default-theme-foreground-color,
+    --theme-text-on-primary-color-color: #fff,
+    --theme-text-on-accent-color-color: #000,
 ));
