--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -21,6 +21,7 @@ $css-vars-use-native: true !default;
 @import "neon-structure";
 @import "neon-effects";
 @import "neon-tables.css";
+@import "neon-theme-selector";
 @import "neon-footer";
 
 
