Sidebar shadow no longer inappropriately appears over the app bar

--- a/assets/v2/material/material-sidebar-renderer.scss
+++ b/assets/v2/material/material-sidebar-renderer.scss
@@ -32,6 +32,8 @@
     background-color: var(--sidebar-background-color);
     box-shadow: shadow($sidebar-z-index);
 
+    clip-path: inset(0);
+
 
     section {
         transition-property: background, background-color;
