Links that mutate the page instead of navigating away are now underlined-on-hover

--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -52,7 +52,10 @@ html {
     &[href^="#"]:not(.navigates-away),
     &.does-not-navigate-away {
         cursor: default;
-        --link-text-decoration: none;
+
+        &:not(:hover):not(:link):not(:active) {
+            --link-text-decoration: none;
+        }
     }
 
     .link-style-underline-on-hover &:not(:hover):not(:focus) {
